--- a/src/styles/pages/Product.module.css
+++ b/src/styles/pages/Product.module.css
@@ -5,18 +5,13 @@
 }
 
 .sliderWrapper {
-    padding: 0 60px;
+    padding: 0 30px;
 }
 
 .infoWrapper {
     flex-grow: 1;
     border-left: 1px solid var(--space-color-1);
     padding-left: 18px;
-}
-
-.sliderImage {
-    width: 400px;
-    height: auto;
 }
 
 .name {
@@ -201,11 +196,7 @@
 
 @media (max-width: 1199px) {
     .sliderWrapper {
-        padding: 0 40px;
-    }
-
-    .sliderImage {
-        width: 280px;
+        padding: 0 20px;
     }
 
     .name {
@@ -240,10 +231,6 @@
 }
 
 @media (max-width: 991px) {
-    .sliderImage {
-        width: 230px;
-    }
-
     .name {
         font-size: 15px;
     }
@@ -358,10 +345,7 @@
     .infoWrapper {
         border-left: none;
         padding: 0;
-    }
-
-    .sliderImage {
-        width: 290px;
+        margin-top: 30px;
     }
 
     .productActions {
@@ -403,11 +387,5 @@
 
     .rightChangeButton {
         right: -12px;
-    }
-}
-
-@media (max-width: 395px) {
-    .sliderImage {
-        width: 260px;
     }
 }
