--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,6 +1,7 @@
 
 :root {
     --header-height: 50px;
+    --header-margin: 40px;
 
     --geologica-font: 'Geologica';
     --manrope-font: 'Manrope';
