--- a/src/styles/components/CatalogItem.module.css
+++ b/src/styles/components/CatalogItem.module.css
@@ -1,8 +1,10 @@
 
 .item {
     --padding-border: 12px;
+    --wholesale-price-block-height: 26px;
+    --wholesale-price-block-margin-top: 4px;
 
-    height: 400px;
+    height: 420px;
     padding: var(--padding-border);
     border-radius: 15px;
     border: 1px solid var(--space-color-1);
@@ -32,7 +34,7 @@
     font-size: 13px;
 }
 
-.oldPrice {
+.additionalPrice {
     color: var(--space-color-2);
     font-size: 12px;
 }
@@ -68,6 +70,18 @@
     font-size: 12px;
 }
 
+.wholesalePriceBlock {
+    background-color: var(--blue-color-1);
+    color: white;
+    padding: 0 8px;
+    font-size: 12px;
+    height: var(--wholesale-price-block-height);
+    margin-top: var(--wholesale-price-block-margin-top);
+    border-radius: 8px;
+}
+
+.wholesalePriceBlock p:nth-child(1) {}
+
 @keyframes out-fade {
     0% {
         opacity: 0;
@@ -96,7 +110,7 @@
 @media (max-width: 450px) {
     .item {
         --padding-border: 10px;
-        height: 410px;
+        height: 430px;
     }
 
     .item img {
@@ -124,7 +138,7 @@
 @media (max-width: 410px) {
     .item {
         --padding-border: 9px;
-        height: 400px;
+        height: 420px;
     }
 
     .article {
@@ -147,7 +161,7 @@
 @media (max-width: 375px) {
     .item {
         --padding-border: 7px;
-        height: 370px;
+        height: 390px;
         border-radius: 9px
     }
 
@@ -159,7 +173,7 @@
         font-size: 10px;
     }
 
-    .oldPrice {
+    .additionalPrice {
         font-size: 10px;
     }
 
@@ -169,6 +183,13 @@
 
     .addToCart {
         font-size: 11px;
+    }
+
+    .wholesalePriceBlock {
+        font-size: 11px;
+    }
+
+    .wholesalePriceBlock, .addToCart {
         border-radius: 7px;
     }
 
