--- a/src/styles/components/Header.module.css
+++ b/src/styles/components/Header.module.css
@@ -2,7 +2,7 @@
 .header {
     height: var(--header-height);
     z-index: 100;
-    margin-bottom: 40px;
+    margin-bottom: var(--header-margin);
 }
 
 .brand {
@@ -55,7 +55,7 @@
     }
 
     .link {
-        font-size: 12px;
+        font-size: 11px;
     }
 
     .icon {
