--- a/src/styles/components/Popup.module.css
+++ b/src/styles/components/Popup.module.css
@@ -32,6 +32,14 @@
     fill: black;
 }
 
+.resultButton {
+    height: 40px;
+    background-color: var(--blue-color-1);
+    color: white;
+    border-radius: 8px;
+    font-size: 16px;
+}
+
 @media (max-width: 767px) {
     .popupContent {
         width: 360px;
