--- a/src/styles/components/Textarea.module.css
+++ b/src/styles/components/Textarea.module.css
@@ -10,6 +10,13 @@
     color: var(--space-color-1);
 }
 
+.symbolCount {
+    font-size: 13px;
+    color: var(--space-color-1);
+    margin-top: 6px;
+    margin-left: 8px;
+}
+
 @media (max-width: 767px) {
     .textarea {
         font-size: 12px;
