--- a/src/styles/pages/Partners.module.css
+++ b/src/styles/pages/Partners.module.css
@@ -68,9 +68,17 @@
     object-fit: contain;
 }
 
-.authButton {
-    margin-top: 12px;
-    font-size: 12px;
+.labelCheckbox {
+    font-size: 14px;
+    flex-wrap: wrap;
+    text-wrap: nowrap;
+}
+
+.labelCheckbox input {
+    margin-right: 8px;
+}
+
+.labelCheckbox a {
     color: var(--blue-color-1);
 }
 
@@ -86,6 +94,10 @@
     .partnerRegText {
         font-size: 16px;
         margin-bottom: 14px;
+    }
+
+    .labelCheckbox {
+        font-size: 12px;
     }
 }
 
