--- a/src/styles/components/CatalogItem.module.css
+++ b/src/styles/components/CatalogItem.module.css
@@ -48,7 +48,7 @@
     margin-top: 10px;
     border-radius: 8px;
     font-size: 13px;
-    color: white !important;
+    color: white;
     height: 30px;
     background-color: var(--foreground-color);
 }
