fix styles and bugs

--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -67,6 +67,7 @@
 .categoryBlocks button {
     width: calc((100% - ((var(--number-of-blocks-on-line) - 1) * var(--blocks-gap))) / var(--number-of-blocks-on-line));
     aspect-ratio: 1;
+    height: auto;
     border: 1px solid rgba(0, 0, 0, 0.3);
     border-radius: 20px;
     font-size: 18px;
