--- a/src/app/Pages/NewOrder/widgets/ProductsListPopup/ui/ProductListPopup.module.css
+++ b/src/app/Pages/NewOrder/widgets/ProductsListPopup/ui/ProductListPopup.module.css
@@ -21,10 +21,22 @@
         width: 80%;
         max-height: 90vh;
     }
+
+    .list {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 15px;
+    }
 }
 
 @media (max-width: 767px) {
     .popupContent {
         width: 85%;
+    }
+}
+
+@media (max-width: 450px) {
+    .list {
+        column-gap: 10px;
     }
 }
