--- a/src/widgets/VariantSelector/ui/VariantSelector.module.css
+++ b/src/widgets/VariantSelector/ui/VariantSelector.module.css
@@ -13,7 +13,15 @@
 
 .label {
     cursor: pointer;
+}
+
+.label > div {
     gap: 12px;
+}
+
+.clue {
+    font-size: 12px;
+    color: var(--blue-color-2);
 }
 
 @media (max-width: 991px) {
