--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -12,6 +12,7 @@
 
     --blue-color-1: #448AFF;
     --blue-color-2: #546E7A;
+    --blue-color-3: #ECF3FF;
     --turquoise-color: #00E5FF;
     --yellow-color: #FDD835;
     --red-color: #E41515;
