--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -53,6 +53,10 @@ input {
   animation: rotate 0.6s linear infinite;
 }
 
+#nprogress .bar {
+  height: 3px !important;
+}
+
 @keyframes rotate {
   0% {
     rotate: 0;
