--- a/src/app/Pages/Home/widgets/SubCategoriesPopup/ui/SubCategoriesPopup.module.css
+++ b/src/app/Pages/Home/widgets/SubCategoriesPopup/ui/SubCategoriesPopup.module.css
@@ -23,7 +23,6 @@
 .gridItem h3 {
     font-size: 13px;
     flex-shrink: 0;
-    margin-top: auto;
 }
 
 .imageWrapper {
@@ -32,8 +31,8 @@
 }
 
 .imageWrapper img {
-    height: 90%;
     max-width: 90%;
+    max-height: 90%;
     object-fit: contain;
 }
 
