--- a/src/app/Pages/Home/widgets/Slider/ui/Slider.module.css
+++ b/src/app/Pages/Home/widgets/Slider/ui/Slider.module.css
@@ -1,7 +1,8 @@
 
 .wrapper {
     margin-top: calc(-1 * var(--header-margin));
-    height: 700px;
+    background-color: white;
+    display: flex;
 }
 
 .sliderDots {
@@ -12,6 +13,7 @@
     left: 50%;
     transform: translateX(-50%);
     overflow: hidden;
+    z-index: 2;
 }
 
 .sliderDots ul {
@@ -57,9 +59,6 @@
     outline: none;
     background: none;
     padding: 0;
+    z-index: 3;
 }
 
-.content {
-    padding-left: 80px;
-    padding-right: 80px;
-}
