--- a/src/app/Pages/Catalog/widgets/SortingSection/ui/SortingSection.module.css
+++ b/src/app/Pages/Catalog/widgets/SortingSection/ui/SortingSection.module.css
@@ -17,7 +17,8 @@
     width: 20px;
     aspect-ratio: 1;
     border-radius: 5px;
-    border: 2px solid var(--foreground-color)
+    border: 2px solid var(--foreground-color);
+    flex-shrink: 0;
 }
 
 .labelCheckbox span > svg {
@@ -75,4 +76,20 @@
     width: 16px;
     aspect-ratio: 1;
     fill: black;
+}
+
+@media (max-width: 440px) {
+    .labelCheckbox, .buttonSorting {
+        font-size: 13px;
+        gap: 5px;
+    }
+
+    .labelCheckbox span {
+        width: 16px;
+        border-radius: 5px;
+    }
+
+    .buttonSorting svg {
+        width: 18px;
+    }
 }
