--- a/src/styles/pages/Product.module.css
+++ b/src/styles/pages/Product.module.css
@@ -1,7 +1,7 @@
 
 .sectionFirst {
     display: flex;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
 .sliderWrapper {
@@ -110,6 +110,21 @@
     padding: 0 45px;
 }
 
+.links {
+    gap: 20px;
+    margin: 10px 0 20px;
+}
+
+.links a {
+    height: 40px;
+    padding: 0 26px;
+    border: 1px solid var(--space-color-1);
+    border-radius: 20px;
+    font-size: 18px;
+    color: black;
+    background-color: white;
+}
+
 .similarProductsSection {
     --card-size: 140px;
     --ribbon-gap: 35px;
@@ -134,7 +149,7 @@
 }
 
 .changeSlideButton {
-    width: 30px;
+    height: 30px;
     aspect-ratio: 1;
     border-radius: 50%;
     background-color: var(--foreground-color);
@@ -153,6 +168,7 @@
 }
 
 .imageSlider {
+    object-fit: contain;
     width: var(--card-size);
     height: var(--card-size);
 }
@@ -233,6 +249,17 @@
         font-size: 16px;
         padding: 0 40px;
     }
+
+    .links {
+        gap: 15px;
+        margin: 8px 0 15px;
+    }
+
+    .links a {
+        height: 36px;
+        padding: 0 21px;
+        font-size: 16px;
+    }
 }
 
 @media (max-width: 991px) {
@@ -292,6 +319,17 @@
         font-size: 14px;
         padding: 0 30px;
         border-radius: 7px;
+    }
+
+    .links {
+        gap: 12px;
+        margin: 0 0 10px;
+    }
+
+    .links a {
+        height: 34px;
+        padding: 0 18px;
+        font-size: 14px;
     }
 
     .similarProductsSection {
@@ -392,5 +430,11 @@
 
     .rightChangeButton {
         right: -12px;
+    }
+
+    .links a {
+        height: 36px;
+        padding: 0 21px;
+        font-size: 16px;
     }
 }
